# wiz-cli

./: LICENSE  README.md  pyproject.toml
src/wiz_cli/: main.py
