[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiz-cli"
version = "1.0.0"
description = "Control WiZ smart lights from the terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "pywizlight>=0.6.0",
]

[project.scripts]
wiz = "wiz_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
